Fixed form for order checkout so all fields are visible

--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the Orders controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.container {
+    max-width: 50%;
+}
+
+.page-header {
+    margin-top: 3em;
+    text-align: center;
+}
